# bsp-framework

./: Cargo.toml
crates/bsp-core/: Cargo.toml
crates/bsp-core/benches/: signal_entity_bencmark.rs
crates/bsp-core/examples/: basic_usage.rs
crates/bsp-core/src/: emg_types.rs  error.rs  format.rs  lib.rs  metadata.rs  quality.rs  signal_entity.rs  signal_types.rs  timestamp.rs
crates/bsp-desktop/: Cargo.toml
crates/bsp-desktop/src/: app.rs  main.rs  processing_service.rs  ui.rs
crates/bsp-pocessing/: Cargo.toml
crates/bsp-pocessing/src/: config.rs  features.rs  filters.rs  lib.rs  pipeline.rs  processor.rs
crates/bsp-simulation/: Cargo.toml
crates/bsp-simulation/src/: emg_simulator.rs  lib.rs  real_time_stream.rs  signal_patterns.rs
