[workspace]
members = [
    "crates/bsp-core",
    "crates/bsp-simulation",
    "crates/bsp-desktop"
, "crates/bsp-pocessing"]
resolver = "2"

[workspace.dependencies]
# Common dependencies across crates
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
