[package]
name = "bsp-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsp-desktop"
path = "src/main.rs"

[dependencies]
bsp-core = { path = "../bsp-core" }
bsp-simulation = { path = "../bsp-simulation" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UI Framework
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28"

# Additional utilities
rfd = "0.12" # File dialogs
chrono = { version = "0.4", features = ["serde"] }

# Windows-specific fix
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processenv", "wincon"] }

[features]
default = []